# rudp

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/rudp/: main.cpp
src/rudp/core/: manager.cpp  manager.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp
src/rudp/packets/: rudp_packet.cpp  rudp_packet.hpp
src/rudp/utils/: udp_socket.cpp  udp_socket.hpp
